--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"daisyui": "^5.0.46",
 		"dayjs": "^1.11.13",
 		"lodash": "^4.17.21",
-		"svelte-calendar": "^3.1.6"
+		"svelte-calendar": "^3.1.6",
+		"tailwind-scrollbar-hide": "^4.0.0"
 	}
 }
